descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.


----------------------------------------------------------------------
--- 2008-XX-XX  Release 7.XX.X                                     ---
----------------------------------------------------------------------

* fixed double-edged line segment sketch bug in dxf-g - John Anderson
* mged 'inside' command no longer uses edit state objects - Bob Parker
* reported and fixed mged documentation eto typein bug - Robert Penny
* fixed mged itcl.tcl startup failure prior to install - Sean Morrison
* fixed bot_dump -u command line option for setting units - Bob Parker
* changed automatic 'make' sizes for various primitives - Bob Parker
* fixed bug with mged 'make' command automatic keypoints - Bob Parker
* renamed all mk_ tools to remove the mk_ prefix - Sean Morrison
* more conversion of documentation to Docbook format - Janine Gettier
* removed the unused 'k'eypoint point on extrudes - Sean Morrison
* added new dem-g terrain importer - Richard Weiss
* layout tweaks to display of selection lists in archer - Doug Howard
* activate primitive creation buttons in archer - Bob Parker
* activate wizard plugins and add tire wizard to archer - Bob Parker
* new initial manual page for bot_dump - Sean Morrison
* added editing support for hyperboloid primitive to mged - Cliff Yapp
* new 'lens' procedural tool for making optical lenses - Cliff Yapp


----------------------------------------------------------------------
--- 2008-11-04  Release 7.14.0                                     ---
----------------------------------------------------------------------

Of the many enhancements included in this release, MGED gets a
powerful new command called 'search' that is very similar to the UNIX
'find' command but for geometry hierarchies.  Included in the
implementation of 'search' is the ability to list geometry that